--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <div id="app"className="container fluid"/>
+    <main id="app"className="container fluid"/>
 
     <script src="js/bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
